[package]
name = "nostrhole"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-compression = { version = "0.4.18", features = ["tokio", "zstd"] }
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.15.7", features = ["yaml"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
sled = "0.34.7"
tokio = { version = "1.42.0", features = ["macros", "fs", "rt", "rt-multi-thread"] }
serde = { version = "1.0.216", features = ["derive"] }
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
base64 = "0.22.1"
itertools = "0.14.0"

nostr-relay-builder = { git = "https://github.com/rust-nostr/nostr.git", rev = "b5b6c0d422ad3f99d479768bbb011ac7a7cc68f0", package = "nostr-relay-builder" }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", rev = "b5b6c0d422ad3f99d479768bbb011ac7a7cc68f0", package = "nostr-sdk" }
nostr = { git = "https://github.com/rust-nostr/nostr.git", rev = "b5b6c0d422ad3f99d479768bbb011ac7a7cc68f0", package = "nostr" }
http-body-util = "0.1.2"
tokio-util = { version = "0.7.13", features = ["io"] }
