[package]
name = "nostrhole"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-compression = { version = "0.4.27", features = ["tokio", "zstd"] }
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
config = { version = "0.15.14", features = ["yaml"] }
log = "0.4.27"
env_logger = "0.11.8"
sled = "0.34.7"
tokio = { version = "1.47.1", features = ["macros", "fs", "rt", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
hyper = { version = "1.7", features = ["server", "http1"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
base64 = "0.22.1"
itertools = "0.14.0"
sha1 = "0.10.6"
nostr-relay-builder = "0.43.0"
nostr-sdk = "0.43.0"
http-body-util = "0.1.3"
tokio-util = { version = "0.7.16", features = ["io"] }
